# hdx-scraper-icpac-cdi

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py
.config/: ruff.toml
.github/: run-python-script.yaml
.github/workflows/: publish.yaml  run-python-script.yaml  run-python-tests.yaml
src/hdx/scraper/icpac_cdi/: __main__.py  icpac_cdi.py  pipeline.py
src/hdx/scraper/icpac_cdi/config/: hdx_dataset_static.yaml  project_configuration.yaml
tests/: conftest.py  test_icpac_cdi.py  test_pipeline.py
tests/fixtures/input/: dataset-igad-region-dekadal-combined-drought-indicator-cdi-2024.json  dekadal_2024  monthly_2024
